--- a/web-agit-jamkrindo/src/main/webapp/assets/css/main.css
+++ b/web-agit-jamkrindo/src/main/webapp/assets/css/main.css
@@ -18081,7 +18081,7 @@ ul.main-menu > li > a,
 .top-content ul.quick-access > li .quick-access-item {
   display: block;
   position: relative;
-  background-color: #555;
+  background-color: #CF9322;
   color: #fff;
   padding: 15px;
   text-align: left;
