--- a/web-agit-jamkrindo/src/main/webapp/assets/assets/css/core.css
+++ b/web-agit-jamkrindo/src/main/webapp/assets/assets/css/core.css
@@ -212,7 +212,7 @@ textarea.form-control {
   background-color: #ffbd4a;
 }
 .label-danger {
-  background-color: #f05050;
+  background-color: #428bca;
 }
 .label-purple {
   background-color: #7266ba;
