--- a/web-agit-jamkrindo/src/main/webapp/assets/css/main.css
+++ b/web-agit-jamkrindo/src/main/webapp/assets/css/main.css
@@ -18269,7 +18269,7 @@ ul.main-menu > li > a,
 .widget .widget-header em {
   float: left;
   font-size: 0.9em;
-  color: #a4a4a4;
+  color: black;
   line-height: 35px;
   margin-left: 4px;
 }
