--- a/web-agit-jamkrindo/src/main/webapp/assets/css/main.css
+++ b/web-agit-jamkrindo/src/main/webapp/assets/css/main.css
@@ -17090,7 +17090,7 @@ h3, h4, h5, h6 {
 
 /* line 25, ../../sass/partials/_general.scss */
 hr {
-    border-top-color: #ddd;
+    border-top-color: #fffdfd00;
 }
 /* line 28, ../../sass/partials/_general.scss */
 hr.inner-separator {
@@ -18086,6 +18086,8 @@ ul.main-menu > li > a,
     padding: 15px;
     text-align: left;
     overflow: hidden;
+    width:250px;
+    height:100px;
 }
 /* line 166, ../../sass/partials/_main-content.scss */
 .top-content ul.quick-access > li .quick-access-item h5, .top-content ul.quick-access > li .quick-access-item p {
